salesforce/ReSalesforceCore/force-app/main/default/objects/Integration_Log__c/Integration_Log__c.object-meta.xml
<CustomObject>
    <description>Re ERP ile Salesforce arasındaki güvenli entegrasyon işlemlerinin denetim kaydı.</description>
    <label>Re Entegrasyon Logu</label>
    <nameField>
        <displayFormat>RELOG-{000000}</displayFormat>
        <label>Log Numarası</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Re Entegrasyon Logları</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>