salesforce/ReSalesforceCore/force-app/main/default/objects/Integration_Log__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName><externalId>true</externalId><label>Korelasyon Kimliği</label>
    <length>64</length><required>true</required><trackHistory>true</trackHistory><type>Text</type><unique>true</unique>
</CustomField>