salesforce/ReSalesforceCore/force-app/main/default/objects/Integration_Log__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName><label>Yön</label><required>true</required><type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
      <value><fullName>ERP_TO_SALESFORCE</fullName><default>false</default><label>ERP → Salesforce</label></value>
      <value><fullName>SALESFORCE_TO_ERP</fullName><default>false</default><label>Salesforce → ERP</label></value>
    </valueSetDefinition></valueSet>
</CustomField>