salesforce/ReSalesforceCore/force-app/main/default/objects/Integration_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName><label>Mesaj</label><length>32768</length><type>LongTextArea</type><visibleLines>5</visibleLines>
</CustomField>