salesforce/ReSalesforceCore/force-app/main/default/objects/Integration_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName><label>Durum</label><required>true</required><type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
      <value><fullName>PENDING</fullName><default>true</default><label>Bekliyor</label></value>
      <value><fullName>COMPLETED</fullName><default>false</default><label>Tamamlandı</label></value>
      <value><fullName>FAILED</fullName><default>false</default><label>Başarısız</label></value>
    </valueSetDefinition></valueSet>
</CustomField>